# v2rayN

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci-tauri.yml
v2rayN/: DomStructureAnalyzer.js
v2rayN.Tauri/: index.html  package-lock.json  package.json  vite.config.ts
v2rayN.Tauri/src/: App.tsx  index.css  main.tsx
v2rayN.Tauri/src-tauri/: Cargo.toml  tauri.conf.json
v2rayN.Tauri/src-tauri/src/: app_state.rs  commands.rs  config_store.rs  core_runtime.rs  core_update.rs  domain.rs  events.rs  http_server.rs  lib.rs  macos_app_bundle.rs  models.rs  network_probe.rs  server.rs  system_proxy.rs  tun.rs
v2rayN.Tauri/src/lib/: api.ts  browserApi.ts  types.ts
